make dockerfile  can be build and add tutorial in README.md

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -42,10 +42,10 @@ RUN --mount=type=cache,target=/root/.cache/pip \
 USER appuser
 
 # Copy the source code into the container.
-COPY .. .
+COPY . .
 
 # Expose the port that the application listens on.
 EXPOSE 5000
 
 # Run the application.
-CMD ["python", "../app.py"]
+CMD ["python", "app.py"]
