--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -21,6 +21,7 @@ WORKDIR /app
 # Create a non-privileged user that the app will run under.
 # See https://docs.docker.com/go/dockerfile-user-best-practices/
 ARG UID=10001
+
 RUN adduser \
     --disabled-password \
     --gecos "" \
@@ -48,4 +49,4 @@ COPY . .
 EXPOSE 5000
 
 # Run the application.
-CMD ["python", "app.py"]
+CMD ["python3", "app.py"]
