--- a/compose.yaml
+++ b/compose.yaml
@@ -7,7 +7,12 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - PORT=5000
+        DB_NAME: datacenter_management
+        DB_USER: postgres
+        DB_PASSWORD: postgres
+        DB_HOST: db
+        DB_PORT: 5432
+        PORT: 5000
     restart: unless-stopped
     networks:
       - my_network
