fix: added flask-cors, api endpoint reformatting and some minor format error

--- a/compose.yaml
+++ b/compose.yaml
@@ -22,7 +22,7 @@ services:
   db:
     build:
       context: .
-      dockerfile: ./db/dockerfile
+      dockerfile: ./db/Dockerfile
     container_name: database
     environment:
       - POSTGRES_USER=postgres
