--- a/db/dockerfile
+++ b/db/dockerfile
@@ -5,7 +5,7 @@ ENV POSTGRES_PASSWORD=postgres
 ENV POSTGRES_DB=datacenter_management
 ENV PGDATA=/var/lib/postgresql/data/pgdata
 
-COPY db/database_setup.sql /docker-entrypoint-initdb.d/
+COPY ./database_setup.sql /docker-entrypoint-initdb.d/
 
 # default PostgreSQL port
 EXPOSE 5432
